@@ -42,6 +42,21 @@ function lsx_to_customizer_colour_selectors_button( $css, $colors ) {
 				}
 			}
 		}
+
+		body.archive-tour-operator {
+			.facetwp-slider-reset {
+				&,
+				&:visited {
+					background-color: {$colors['button_background_color']};
+				}
+
+				&:hover,
+				&:focus,
+				&:active {
+					background-color: {$colors['button_background_hover_color']};
+				}
+			}
+		}
 CSS;
 
 	return $css;
@@ -240,7 +255,7 @@ function lsx_to_customizer_colour_selectors_body( $css, $colors ) {
 						}
 					}
 				}
-				
+
 				#itinerary {
 					.panel {
 						.itinerary-inner {
@@ -268,7 +283,7 @@ function lsx_to_customizer_colour_selectors_body( $css, $colors ) {
 						}
 					}
 				}
-				
+
 				#rooms,
 				#chalets,
 				#tents,
@@ -290,7 +305,7 @@ function lsx_to_customizer_colour_selectors_body( $css, $colors ) {
 						}
 					}
 				}
-				
+
 				#rooms {
 					.panel {
 						& > .room {
